# tunduk_kc

./: .gitignore  README.md  docker-compose-db.yaml  docker-compose.yaml  fixtures.json  pyproject.toml  requirements.txt  server.py
.github/workflows/: access-server.yml  run-tests.yml
apps/accounts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_customuser_company.py  0002_customuser_is_admin.py  (+1 more)
apps/history/: admin.py  models.py
apps/tunduk/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
compose/back/: Dockerfile  entrypoint.sh
compose/nginx/: Dockerfile  nginx-setup.conf
core/: ckeditor_settings.py  dev_settings.py  jazzmin_settings.py  settings.py  tinymc_settings.py  urls.py
static/css/: color-2.css  print.css  responsive.css  soft-ui-dashboard.css  style.css
static/js/: custom.js
templates/: base.html  home.html
templates/registration/: login.html  password_change_form.html
templates/tunduk/: controller.html  personal_info.html  request_detail.html  request_list.html
templates/utils/: footer.html  header.html  mobile_nav.html  news_sidebar.html
utils/: constants.py  get_data.py  singletone.py  utils.py
utils/abstract_class/: abstract_tunduk_system.py
utils/documents/: documents_parser.py  html_to_docx.py
utils/middleware/: changelog_middleware.py
utils/mixins/: changelog_mixins.py
utils/signals/: changelog_signals.py  customuser_signals.py
utils/tunduk/: infocom.py  kadastr.py  minSelXoz.py  minjyst.py  tunduk_request_log.py  unaa.py
(+32 files in other folders)
